# small_fable

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_INTERLEAVED.md  DESIGN_CONTRASTS.md  DISCOVERED_PROMPTS.md  GROUNDING_RESULTS.md  HUNT_CHECKPOINT.md  PRIMITIVES.md  README.md  RUN_ON_A100.md  annotate_reward_paths.py  build_sensitivity_corpus.py  checkers.py  checkpointing.py  compare.py  compare_clubbing.py  flatten_to_sft.py  grounding_blocks.ipynb  grounding_blocks_c1.jsonl  grounding_blocks_c2.jsonl  grounding_fmt_concrete.jsonl  grounding_fmt_definitional.jsonl  grounding_fmt_numbered.jsonl  grounding_fmt_terse.jsonl  grounding_fmt_verbose.jsonl  grounding_test.ipynb  grounding_test.py  grounding_test_data.jsonl  grpo_offpolicy.py  hard_bench.ipynb  hard_bench.jsonl  hard_bench_run.py  important_design_choices.md  index.html  inference_colab.ipynb  interleaved_bench.ipynb  interleaved_solver.py  model_joint.py  plan_formats.ipynb  pyproject.toml  (+13 more)
configs/: grpo.yaml  grpo_a100.yaml  rollout.yaml  rollout_a100.yaml  sft.yaml  sft_a100.yaml
data_src/: rl_targets_v3.jsonl  sft_trajectories_v3.jsonl
dataset/: sft_100.jsonl  sft_flat.jsonl  sft_synth_v4.jsonl  sft_synth_v4_val.jsonl
examples/: run_demo.py
notebooks/: patch_test_colab.ipynb  preserve_test_colab.ipynb  probe_lens_colab.ipynb  residual_orrery_colab.ipynb  scale_study_colab.ipynb
residual_orrery/: DESIGN.md  DESIGN_V2.md  README.md  __init__.py  animate.py  cli.py  collect.py  compare.py  examples.py  models.py  project.py
tests/: test_checkers.py  test_curriculum.py  test_grpo_offpolicy.py  test_interleaved.py  test_pipeline_smoke.py  test_resume.py
tools/: analyze_formats.py  export_metrics.py  gen_grounding_blocks.py  gen_grounding_data.py  gen_hard_bench.py  gen_plan_formats.py  gen_synth_v4.py  hard_bench_selftest.py  interleaved_blocks.py  leak_audit.py  make_preview_gif.py  (+8 more)
(+8 files in other folders)
